--- a/css/all.css
+++ b/css/all.css
@@ -52,7 +52,7 @@ table {
   border-spacing: 0;
 }
 
-*, *:before, *:after {
+*, *::before, *::after {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -88,6 +88,12 @@ a {
   line-height: 29px;
 }
 
+.font-18-26-b {
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: bold;
+}
+
 .font-18-26 {
   font-size: 18px;
   line-height: 26px;
@@ -98,6 +104,36 @@ a {
   line-height: 24px;
 }
 
+@media (max-width: 767px) {
+  .s-font-32-46-b {
+    font-size: 32px;
+    line-height: 46px;
+    font-weight: bold;
+  }
+
+  .s-font-28-40-b {
+    font-size: 28px;
+    line-height: 40px;
+    font-weight: bold;
+  }
+
+  .s-font-24-35-b {
+    font-size: 24px;
+    line-height: 35px;
+    font-weight: bold;
+  }
+
+  .s-font-18-26-b {
+    font-size: 18px;
+    line-height: 26px;
+    font-weight: bold;
+  }
+
+  .s-font-16-24 {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
 .btn {
   border-radius: 27px;
   background: #56C4C5;
@@ -106,8 +142,19 @@ a {
   font-family: "Comfortaa";
   color: #fff;
   display: inline-block;
+  border: 1px solid #56C4C5;
 }
 
+.btn:hover {
+  background: #fff;
+  color: #56C4C5;
+}
+
+@media (max-width: 767px) {
+  .s-display-n {
+    display: none;
+  }
+}
 body {
   font-family: "Noto Sans TC";
   background-image: url("../images/ball01.svg"), url("../images/ball02.svg"), url("../images/ball03.svg");
@@ -117,11 +164,22 @@ body {
   color: #221E1F;
 }
 
+@media (max-width: 767px) {
+  body {
+    background-size: 126px, 135px, 153px;
+    background-position: -77px calc(100vh + 15px), calc(100vw - 88px) 460vh, -76px 750vh;
+  }
+}
 .container {
   margin: 0 auto;
   max-width: 1088px;
 }
 
+@media (max-width: 767px) {
+  .container {
+    width: 80vw;
+  }
+}
 .top {
   position: fixed;
   top: 90vh;
@@ -137,6 +195,11 @@ body {
   background: #56C4C5;
   border-radius: 100%;
   font-weight: bold;
+  border: 1px solid #56C4C5;
+}
+.top a:hover {
+  background: #fff;
+  color: #56C4C5;
 }
 
 .header {
@@ -154,6 +217,22 @@ body {
   color: #56C4C5;
 }
 
+@media (max-width: 767px) {
+  .header {
+    background-image: url("../images/home.svg"), url("../images/bg_home_sm.svg");
+    background-size: 80vw auto, 89vw auto;
+    background-position: bottom 10vh center;
+  }
+  .header .content {
+    padding: 0;
+  }
+  .header .content h1 {
+    margin-bottom: 8px;
+  }
+  .header .content h2 {
+    margin-bottom: 16px;
+  }
+}
 .header-bar {
   padding: 24px;
   display: -webkit-box;
@@ -176,8 +255,23 @@ body {
   background: #FF5D50;
   color: #fff;
   line-height: 24px;
+  border: 1px solid #FF5D50;
+}
+.header-bar .programFee:hover {
+  background: #fff;
+  color: #FF5D50;
 }
 
+@media (max-width: 767px) {
+  .header-bar {
+    border-bottom: 2px solid #FFD153;
+    padding: 24px 10vw;
+    width: 100vw;
+  }
+  .header-bar .logo img {
+    height: 24px;
+  }
+}
 .platform {
   max-width: 969px;
   text-align: center;
@@ -219,6 +313,25 @@ body {
   color: #747474;
 }
 
+@media (max-width: 767px) {
+  .platform {
+    width: 80vw;
+  }
+  .platform ul {
+    display: block;
+  }
+  .platform ul li {
+    width: 100%;
+    margin-bottom: 24px;
+  }
+  .platform ul li img {
+    width: 60px;
+    margin-bottom: 16px;
+  }
+  .platform ul li h3 {
+    margin-bottom: 16px;
+  }
+}
 .role {
   text-align: center;
   margin-bottom: 100px;
@@ -255,6 +368,18 @@ body {
   margin-bottom: 16px;
 }
 
+@media (max-width: 767px) {
+  .role ul {
+    width: 67vw;
+    margin: 0 auto;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .role ul li {
+    width: 100%;
+    margin-bottom: 24px;
+  }
+}
 .feature {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -325,6 +450,24 @@ body {
   font-weight: bold;
 }
 
+@media (max-width: 767px) {
+  .feature {
+    display: block;
+  }
+  .feature .featureContent {
+    text-align: center;
+    width: 80vw;
+  }
+  .feature ul {
+    width: 67vw;
+    display: block;
+    margin: 0 auto;
+  }
+  .feature ul li {
+    margin: 0 auto 24px;
+    padding: 32px 24px 48px;
+  }
+}
 .evaluate {
   text-align: center;
 }
@@ -348,6 +491,7 @@ body {
   border-radius: 12px;
   padding: 48px 32px 24px;
   position: relative;
+  background: #fff;
 }
 .evaluate .userList > li p {
   padding-bottom: 24px;
@@ -423,6 +567,11 @@ body {
   margin-right: 0;
 }
 
+@media (max-width: 767px) {
+  .evaluate .userList > li {
+    width: 100%;
+  }
+}
 footer .add {
   background: #fff;
   background-image: url("../images/home_footer.svg");
@@ -436,6 +585,19 @@ footer .add a {
   margin-top: 48px;
 }
 
+@media (max-width: 767px) {
+  footer .add {
+    background: #fff;
+    background-image: url("../images/footer_sm.svg");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    padding-top: 293px;
+    padding-bottom: 60px;
+  }
+  footer .add a {
+    margin-top: 24px;
+  }
+}
 .copyright {
   background: #F5F5F5;
   text-align: center;
