--- a/scss/_format.scss
+++ b/scss/_format.scss
@@ -17,6 +17,11 @@
     font-size: 20px;
     line-height: 29px;
 }
+.font-18-26-b{
+    font-size: 18px;
+    line-height: 26px;
+    font-weight: bold;
+}
 .font-18-26{
     font-size: 18px;
     line-height: 26px;
@@ -24,6 +29,32 @@
 .font-16-24{
     font-size: 16px;
     line-height: 24px;
+}
+@media (max-width: 767px){
+    .s-font-32-46-b{
+        font-size: 32px;
+        line-height: 46px;
+        font-weight: bold;
+    }
+    .s-font-28-40-b{
+        font-size: 28px;
+        line-height: 40px;
+        font-weight: bold;
+    }
+    .s-font-24-35-b{
+        font-size: 24px;
+        line-height: 35px;
+        font-weight: bold;
+    }
+    .s-font-18-26-b{
+        font-size: 18px;
+        line-height: 26px;
+        font-weight: bold;
+    }
+    .s-font-16-24{
+        font-size: 16px;
+        line-height: 24px;
+    }
 }
 .btn{
     border-radius: 27px;
@@ -33,4 +64,14 @@
     font-family: "Comfortaa";
     color: #fff;
     display: inline-block;
+    border: 1px solid $main-color;
+}
+.btn:hover{
+    background: #fff;
+    color: $main-color;
+}
+@media (max-width: 767px){
+    .s-display-n{
+        display: none;
+    }
 }
