--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -74,11 +74,12 @@ body{
     
 }
 .header-bar{
+    max-width: 1088px;
     padding: 24px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 30px;
+    margin: 0 auto 30px;
     .logo img{
         height: 40px;
     }
@@ -99,7 +100,6 @@ body{
     .header-bar{
         border-bottom: 2px solid $yellow;
         padding: 24px 10vw;
-        width: 100vw;
         .logo img{
             height: 24px;
         }
@@ -127,7 +127,6 @@ body{
             }
             h3{
                 margin-bottom: 24px;
-                white-space:nowrap;
             }
             p{
                 color: $gray;
@@ -396,5 +395,5 @@ footer{
 .copyright{
     background: #F5F5F5;
     text-align: center;
-    padding: 16px;
+    padding: 16px 0;
 }
