--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,5 +1,7 @@
 body{
     font-family: "Noto Sans TC";
+}
+.indexBody{
     background-image:url("../images/ball01.svg"),url("../images/ball02.svg"),url("../images/ball03.svg");
     background-repeat: no-repeat;
     background-size:360px,310px,150px;
@@ -7,7 +9,7 @@ body{
     color: $black;
 }
 @media (max-width: 767px){
-    body{
+    .indexBody{
         background-size:126px,135px,153px;
         background-position:-77px calc(100vh + 15px),calc(100vw - 88px) 460vh,-76px 750vh;
     } 
@@ -396,4 +398,133 @@ footer{
     background: #F5F5F5;
     text-align: center;
     padding: 16px 0;
+}
+// programFee.html
+.program{
+    height: 73vh;
+    background-image: url("../images/banner.svg");
+    background-repeat: no-repeat;
+    background-size: auto 73vh;
+    background-position: top right;
+    position: relative;
+    .content{
+        margin-top: 92px;
+    }
+    .program-bg{
+        position: absolute;
+        top: 0;
+        width: 100vw;
+        height: 62vh;
+        background: #F7F9FD;
+        border-radius: 0px 0px 0px 300px;
+        z-index: -1;
+    }
+}
+.programList{
+    max-width: 909px;
+    margin: 8px auto 0;
+    text-align: center;
+    h2{
+        margin-bottom: 48px;
+    }
+    .peopleChoose{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 64px;
+        li{
+            margin-right: 16px;
+            &:last-child{
+                margin-right: 0;
+            }
+        }
+        a{
+            display: block;
+            padding: 12px 32px;
+            border: 1px solid $main-color;
+            border-radius: 27px;
+            color: $main-color;
+            font-family: "Comfortaa";
+        }
+        .choose{
+            background: $main-color;
+            color: #fff;
+        }
+    }
+}
+.feeList{
+    display: flex;
+    margin-bottom: 94px;
+    h3{
+        padding: 16px 24px;
+        border-bottom: 1px solid #DDDDDD;
+    }
+    &>li{
+        width: 50%;
+        margin-right: 2%;
+        box-shadow: 0px 2px 10px #00000014;
+        border-radius: 12px;
+        padding-bottom: 38px;
+    }
+    .feeBody{
+        padding: 32px 23px 0 29px;
+        &>p{
+            margin-bottom: 32px;
+        }
+    }
+}
+.feeFormula{
+    display: flex;
+    margin-bottom: 32px;
+    justify-content: space-between;
+    align-items: center;
+    &>div{
+        background: #F5F5F5;
+        border-radius: 12px;
+        padding: 24px 32px;
+        h4{
+            margin-bottom: 8px;
+        }
+        span{
+            margin-right: 4px;
+        }
+    }
+}
+.functionList{
+    margin-bottom: 42px;
+    li{
+        display: flex;
+        margin-bottom: 16px;
+        img{
+            margin-right: 12px;
+        }
+    }
+}
+.QAList{
+    ul{
+        text-align-last: left;
+        margin-bottom: 100px;
+        li{
+            background-image: url("../images/icon_plus.svg");
+            background-repeat: no-repeat;
+            background-size:20px;
+            background-position: top 19px right 32px;
+            padding: 16px 32px;
+            box-shadow: 0px 2px 10px #00000014;
+            border-radius: 12px;
+            margin-bottom: 16px;
+            p{
+                display: none;
+                margin-top: 24px;
+                color: #747474;
+                &.show {
+                    display: block;
+                }
+            }
+            &.active{
+                font-weight: bold;
+                color: $main-color;
+                background-image: url("../images/icon_minus.svg");
+            }
+        }
+    }
 }
