--- a/css/all.css
+++ b/css/all.css
@@ -646,14 +646,22 @@ footer .add a {
 .program .content {
   margin-top: 92px;
 }
-.program .program-bg {
+
+.program-bg {
   position: absolute;
   top: 0;
-  width: 100vw;
+  width: 100%;
   height: 62vh;
   background: #F7F9FD;
   border-radius: 0px 0px 0px 300px;
   z-index: -1;
+}
+
+.bg-ball {
+  background: url("../images/ball03.svg");
+  background-repeat: no-repeat;
+  background-size: 361px;
+  background-position: -267px 120vh;
 }
 
 .programList {
@@ -755,8 +763,7 @@ footer .add a {
 }
 
 .QAList ul {
-  -moz-text-align-last: left;
-       text-align-last: left;
+  text-align: left;
   margin-bottom: 100px;
 }
 .QAList ul li {
