--- a/scss/_format.scss
+++ b/scss/_format.scss
@@ -64,10 +64,18 @@
         line-height: 40px;
         font-weight: bold;
     }
+    .s-font-28-32{
+        font-size: 28px;
+        line-height: 32px;
+    }
     .s-font-24-35-b{
         font-size: 24px;
         line-height: 35px;
         font-weight: bold;
+    }
+    .s-font-24-35{
+        font-size: 24px;
+        line-height: 35px;
     }
     .s-font-18-26-b{
         font-size: 18px;
@@ -77,6 +85,10 @@
     .s-font-16-24{
         font-size: 16px;
         line-height: 24px;
+    }
+    .s-font-14-20{
+        font-size: 14px;
+        line-height: 20px;
     }
 }
 .btn{
