--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -38,9 +38,20 @@ body{
         border-radius: 100%;
         font-weight: bold;
         border: 1px solid $main-color;
+        font-family: "Wendy One";
         &:hover{
             background: #fff;
             color: $main-color;
+        }
+    }
+}
+@media (max-width: 767px){
+    .top{
+        a{
+            width: 50px;
+            height: 50px;
+            line-height: 50px;
+            font-size: 14px;
         }
     }
 }
@@ -100,6 +111,7 @@ body{
 }
 @media (max-width: 767px) {
     .header-bar{
+        background: #fff;
         border-bottom: 2px solid $yellow;
         padding: 24px 10vw;
         .logo img{
@@ -411,6 +423,15 @@ footer{
         margin-top: 92px;
     }
 }
+@media (max-width: 767px){
+    .program{
+        height: 100vh;
+        background-image: url("../images/banner_sm.svg");
+        background-repeat: no-repeat;
+        background-size: 100vw auto;
+        background-position: top 90px right;
+    }
+}
 .program-bg{
     position: absolute;
     top: 0;
@@ -419,6 +440,13 @@ footer{
     background: #F7F9FD;
     border-radius: 0px 0px 0px 300px;
     z-index: -1;
+}
+@media (max-width: 767px){
+    .program-bg{
+        height: calc(100vh - 10%);
+        border-radius: 0px 0px 0px 150px;
+        background-position: top 90px right;
+    }
 }
 .bg-ball{
     background: url("../images/ball03.svg");
@@ -457,6 +485,23 @@ footer{
         }
     }
 }
+// TODO:|FIXME:|
+@media (max-width: 767px){
+    .programList{
+        width: 93vw;
+        .peopleChoose{
+            width: 100%;
+            overflow-x:auto;
+            li{
+                margin-right: 8px;
+            }
+            a{
+                padding: 8px 16px;
+                white-space:nowrap;
+            }
+        }
+    }
+}
 .feeList{
     display: flex;
     margin-bottom: 94px;
@@ -467,6 +512,7 @@ footer{
     &>li{
         width: 50%;
         margin-right: 2%;
+        background: #fff;
         box-shadow: 0px 2px 10px #00000014;
         border-radius: 12px;
         padding-bottom: 38px;
@@ -475,6 +521,19 @@ footer{
         padding: 32px 23px 0 29px;
         &>p{
             margin-bottom: 32px;
+        }
+    }
+}
+@media (max-width: 767px){
+    .feeList{
+        flex-wrap: wrap;
+        &>li{
+            width: 100%;
+            margin-right: 0;
+            margin-bottom: 24px;
+        }
+        .feeBody{
+            padding: 24px 16px 0px 16px;
         }
     }
 }
@@ -495,14 +554,33 @@ footer{
         }
     }
 }
+@media (max-width: 767px){
+    .feeFormula{
+        &>div{
+            width: 46%;
+            padding: 16px 24px;
+        }  
+    }
+}
 .functionList{
     margin-bottom: 42px;
+    text-align: left;
     li{
         display: flex;
         margin-bottom: 16px;
         img{
             margin-right: 12px;
         }
+    }
+}
+@media (max-width: 767px){
+    .functionList{
+        li{
+            img{
+                width: 16px;
+                line-height: 14px;
+            }
+        }  
     }
 }
 .QAList{
@@ -530,6 +608,17 @@ footer{
                 font-weight: bold;
                 color: $main-color;
                 background-image: url("../images/icon_minus.svg");
+            }
+        }
+    }
+}
+@media (max-width: 767px){
+    .QAList{
+        ul{
+            margin-bottom: 60px;
+            li{
+                background-size:16px;
+                padding: 16px;
             }
         }
     }
