--- a/css/all.css
+++ b/css/all.css
@@ -229,7 +229,7 @@ body {
 }
 .top {
   position: fixed;
-  top: 90vh;
+  bottom: 5vh;
   right: 5vw;
 }
 .top a {
@@ -477,6 +477,7 @@ body {
           box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.0784313725);
   padding: 32px 32px 48px;
   margin-bottom: 24px;
+  background: #fff;
 }
 .feature ul li .icon {
   width: 86px;
@@ -741,6 +742,10 @@ footer .add a {
   border-radius: 27px;
   color: #56C4C5;
   font-family: "Comfortaa";
+}
+.programList .peopleChoose a:hover {
+  background: #56C4C5;
+  color: #fff;
 }
 .programList .peopleChoose .choose {
   background: #56C4C5;
