--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -25,7 +25,7 @@ body{
 }
 .top{
     position: fixed;
-    top: 90vh;
+    bottom: 5vh;
     right: 5vw;
     a{
         color: #fff;
@@ -237,6 +237,7 @@ body{
             box-shadow: 0px 2px 10px #00000014;
             padding: 32px 32px 48px;
             margin-bottom: 24px;
+            background: #fff;
             .icon{
                 width: 86px;
                 height: 86px;
@@ -485,6 +486,10 @@ footer{
             border-radius: 27px;
             color: $main-color;
             font-family: "Comfortaa";
+            &:hover{
+                background: $main-color;
+                color: #fff;
+            }
         }
         .choose{
             background: $main-color;
