--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -8,7 +8,7 @@ body{
     background-position:-222px calc(100vh - 180px),calc(100vw - 210px) calc(230vh - 180px),50px 340vh;
     color: $black;
 }
-@media (max-width: 767px){
+@media (max-width: 768px){
     .indexBody{
         background-size:126px,135px,153px;
         background-position:-77px calc(100vh + 15px),calc(100vw - 88px) 460vh,-76px 750vh;
@@ -18,9 +18,15 @@ body{
     margin: 0 auto;
     max-width: 1088px;
 }
-@media (max-width: 767px){
+@media (max-width: 992px) {
     .container{
         width: 80vw;
+    }
+}
+@media (max-width: 767px){
+    .container{
+        width: 100vw;
+        padding: 0 20px;
     }
 }
 .top{
@@ -69,30 +75,24 @@ body{
         }
     }
 }
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     .header{
         background-image: url("../images/home.svg"),url("../images/bg_home_sm.svg");
         background-size: 80vw auto, 89vw auto;
         background-position: bottom 10vh center;
         .content{
-            padding: 0;
-            h1{
-                margin-bottom: 8px;
-            }
-            h2{
-                margin-bottom: 16px;
-            }
+            padding: 0 20px;
         }
     }
     
 }
 .header-bar{
     max-width: 1088px;
-    padding: 24px;
+    margin: 0 auto;
+    padding: 24px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 auto 30px;
     .logo img{
         height: 40px;
     }
@@ -121,15 +121,10 @@ body{
     
 }
 .platform{
-    max-width: 969px;
     text-align: center;
-    margin: 0 auto 100px;
-    &>h2{
-        margin-bottom: 48px;
-    }
     ul{
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         li{
             display: flex;
             flex-direction: column;
@@ -137,10 +132,6 @@ body{
             width: 28%;
             img{
                 width: 90px;
-                margin-bottom: 24px;
-            }
-            h3{
-                margin-bottom: 24px;
             }
             p{
                 color: $gray;
@@ -155,13 +146,8 @@ body{
             display: block;
             li{
                 width: 100%;
-                margin-bottom: 24px;
                 img{
                     width: 60px;
-                    margin-bottom: 16px;
-                }
-                h3{
-                    margin-bottom: 16px;
                 }
             }
         }
@@ -170,13 +156,6 @@ body{
 }
 .role{
     text-align: center;
-    margin-bottom: 100px;
-    &>h2{
-        margin-bottom: 16px;
-    }
-    &>p{
-        margin-bottom: 48px;
-    }
     ul{
         display: flex;
         justify-content: space-between;
@@ -193,7 +172,7 @@ body{
             }
             h3{
                 color: $main-color;
-                margin-bottom: 16px;
+                font-weight: bold;
             }
         }
     }
@@ -206,7 +185,6 @@ body{
             flex-wrap: wrap;
             li{
                 width: 100%;
-                margin-bottom: 24px;
             }
         }
     }
@@ -215,28 +193,21 @@ body{
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
-    margin-bottom: 100px;
+    align-items: center;
     .featureContent{
         width: 45%;
-        padding: 50px;
-        h2{
-            margin-bottom: 16px;
-        }
-        a{
-            margin-top: 48px;
-        }
     }
     ul{
         width: 45%;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+        gap: 18px 28px;
         li{
             width: 230px;
             border-radius: 12px;
             box-shadow: 0px 2px 10px #00000014;
             padding: 32px 32px 48px;
-            margin-bottom: 24px;
             background: #fff;
             .icon{
                 width: 86px;
@@ -260,8 +231,6 @@ body{
                 background-image: url("../images/icon04.svg");
             }
             h3{
-                margin-top: 24px;
-                margin-bottom: 16px;
                 font-weight: bold;
             }
         }
@@ -275,11 +244,9 @@ body{
             width: 80vw;
         }
         ul{
-            width: 67vw;
-            display: block;
-            margin: 0 auto;
+            width: 100%;
+            justify-content: center;
             li{
-                margin: 0 auto 24px;
                 padding: 32px 24px 48px;
             }
         }
@@ -288,14 +255,10 @@ body{
 }
 .evaluate{
     text-align: center;
-    &>h2{
-        margin-bottom: 104px;
-    }
     .userList{
         display: flex;
         justify-content: space-between;
         text-align: left;
-        margin-bottom: 24px;
         &>li{
             width: 32.5%;
             box-shadow: 0px 2px 10px #00000014;
@@ -328,7 +291,6 @@ body{
         }
     }
     .userBody{
-        margin-top: 24px;
         display: flex;
         justify-content: space-between;
         align-items: flex-end;
@@ -347,12 +309,10 @@ body{
     .userInfo{
         h3{
             font-weight: bold;
-            margin-bottom: 8px;
         }
     }
     .bar{
         display: flex;
-        margin-bottom: 100px;
         justify-content: center;
         li{
             height: 10px;
@@ -374,6 +334,9 @@ body{
         .userList{
             &>li{
                 width: 100%;
+                p{
+                    padding-bottom: 16px;
+                }
             }
         }
     }
@@ -386,10 +349,6 @@ footer{
         background-repeat: no-repeat;
         text-align: center;
         padding-top: 260px;
-        padding-bottom: 100px;
-        a{
-            margin-top: 48px;
-        }
     }
 }
 @media (max-width: 767px){
@@ -400,10 +359,6 @@ footer{
             background-size: 100%;
             background-repeat: no-repeat;
             padding-top: 293px;
-            padding-bottom: 60px;
-            a{
-                margin-top: 24px;
-            }
         }
     }
 }
@@ -420,9 +375,6 @@ footer{
     background-size: auto 73vh;
     background-position: top right;
     position: relative;
-    .content{
-        margin-top: 92px;
-    }
 }
 @media (max-width: 767px){
     .program{
@@ -466,13 +418,9 @@ footer{
     max-width: 909px;
     margin: 8px auto 0;
     text-align: center;
-    h2{
-        margin-bottom: 48px;
-    }
     .peopleChoose{
         display: flex;
         justify-content: center;
-        margin-bottom: 64px;
         li{
             margin-right: 16px;
             &:last-child{
@@ -515,7 +463,6 @@ footer{
 }
 .feeList{
     display: flex;
-    margin-bottom: 94px;
     h3{
         padding: 16px 24px;
         border-bottom: 1px solid #DDDDDD;
@@ -530,22 +477,15 @@ footer{
     }
     .feeBody{
         padding: 32px 23px 0 29px;
-        &>p{
-            margin-bottom: 32px;
-        }
     }
 }
 @media (max-width: 767px){
     .feeList{
         flex-wrap: wrap;
-        margin-bottom: 60px;
         &>li{
             width: 100%;
             margin-right: 0;
-            margin-bottom: 24px;
-            &:last-child{
-                margin-bottom: 0;
-            }
+            padding-bottom: 24px;
         }
         .feeBody{
             padding: 24px 16px 0px 16px;
@@ -554,16 +494,12 @@ footer{
 }
 .feeFormula{
     display: flex;
-    margin-bottom: 32px;
     justify-content: space-between;
     align-items: center;
     &>div{
         background: #F5F5F5;
         border-radius: 12px;
         padding: 24px 32px;
-        h4{
-            margin-bottom: 8px;
-        }
         span{
             margin-right: 4px;
         }
@@ -578,11 +514,9 @@ footer{
     }
 }
 .functionList{
-    margin-bottom: 42px;
     text-align: left;
     li{
         display: flex;
-        margin-bottom: 16px;
         img{
             margin-right: 12px;
         }
@@ -601,7 +535,6 @@ footer{
 .QAList{
     ul{
         text-align: left;
-        margin-bottom: 100px;
         li{
             background-image: url("../images/icon_plus.svg");
             background-repeat: no-repeat;
@@ -610,10 +543,8 @@ footer{
             padding: 16px 32px;
             box-shadow: 0px 2px 10px #00000014;
             border-radius: 12px;
-            margin-bottom: 16px;
             p{
                 display: none;
-                margin-top: 24px;
                 color: #747474;
                 &.show {
                     display: block;
@@ -623,6 +554,9 @@ footer{
                 font-weight: bold;
                 color: $main-color;
                 background-image: url("../images/icon_minus.svg");
+                p{
+                    font-weight: normal;
+                }
             }
         }
     }
@@ -630,7 +564,6 @@ footer{
 @media (max-width: 767px){
     .QAList{
         ul{
-            margin-bottom: 60px;
             li{
                 background-size:16px;
                 padding: 16px;
