--- a/scss/_format.scss
+++ b/scss/_format.scss
@@ -95,7 +95,8 @@
     border-radius: 27px;
     background: $main-color;
     padding: 12px 32px;
-    font-size: 26px;
+    font-size: 18px;
+    line-height: 26px;
     font-family: "Comfortaa";
     color: #fff;
     display: inline-block;
