--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,5 +1,5 @@
 body{
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans TC", "sans-serif";
 }
 .indexBody{
     background-image:url("../images/ball01.svg"),url("../images/ball02.svg"),url("../images/ball03.svg");
@@ -16,7 +16,9 @@ body{
 }
 .container{
     margin: 0 auto;
-    max-width: 1088px;
+    max-width: 1120px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 @media (max-width: 992px) {
     .container{
@@ -126,12 +128,12 @@ body{
         display: flex;
         justify-content: center;
         li{
-            display: flex;
-            flex-direction: column;
-            align-items: center; 
+            text-align: center;
             width: 28%;
             img{
                 width: 90px;
+                margin-right: auto;
+                margin-left: auto;
             }
             p{
                 color: $gray;
@@ -241,7 +243,7 @@ body{
         display: block;
         .featureContent{
             text-align: center;
-            width: 80vw;
+            width: 100%;
         }
         ul{
             width: 100%;
@@ -369,10 +371,10 @@ footer{
 }
 // programFee.html
 .program{
-    height: 73vh;
+    height: 100vh;
     background-image: url("../images/banner.svg");
     background-repeat: no-repeat;
-    background-size: auto 73vh;
+    background-size: auto 100vh;
     background-position: top right;
     position: relative;
 }
@@ -389,7 +391,7 @@ footer{
     position: absolute;
     top: 0;
     width: 100%;
-    height: 62vh;
+    height: 80vh;
     background: #F7F9FD;
     border-radius: 0px 0px 0px 300px;
     z-index: -1;
@@ -510,15 +512,19 @@ footer{
         &>div{
             width: 46%;
             padding: 16px 24px;
+            white-space:nowrap;
         }  
     }
 }
 .functionList{
     text-align: left;
     li{
-        display: flex;
         img{
             margin-right: 12px;
+            display: inline;
+        }
+        p{
+            display: inline;
         }
     }
 }
